<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.shivagss.twitterclient.activity.ProfileActivity" >

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="1"
          android:icon="@drawable/ic_title_share_default"
          android:showAsAction="always" />

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:orderInCategory="2"
          android:icon="@drawable/ic_title_search_default"
          android:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
